<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        style="@style/myTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/settings" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_sync_title"
                android:textStyle="bold"

                />


        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/back_desc"
                style="@style/myNormalText"

                android:text="@string/back_sync_desc" />


        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_showmore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showmore_title"
                android:textStyle="bold"
                />




        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/show_desc"
                style="@style/myNormalText"


                android:text="@string/showmore_desc" />

        </TableRow>


    </TableLayout>


    <Button

        android:id="@+id/btn_save"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorGreen"
        android:text="@string/save"
        android:textAllCaps="false"

        android:textColor="@color/colorWhite"

        />
</RelativeLayout>
