<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        style="@style/myTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/manage_portfolio" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/gear_icon" />

    <RelativeLayout
        android:id="@+id/data_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:padding="10dp"
        android:paddingBottom="20dp">


        <EditText
            android:id="@+id/txt_symbol"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@color/colorWhite"
            android:hint="@string/hint_symbol"
            android:inputType="textCapCharacters"
            android:padding="10dp" />

        <EditText
            android:id="@+id/txt_qty"
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/txt_symbol"
            android:background="@color/colorWhite"
            android:hint="@string/hint_qty"
            android:inputType="number"
            android:padding="10dp" />

        <Button

            android:id="@+id/add_button"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorGreen"
            android:text="@string/add"
            android:textAllCaps="false"

            android:textColor="@color/colorWhite"

            />

    </RelativeLayout>


    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_row"></ListView>


</RelativeLayout>
